# GEP_NG

./: Clustering_results.xlsx  Generate_clusters.ipynb  Makefile  README.md  clustering.py  coderunner.ipynb  pyproject.toml
Clustering/: Clustering_results.xlsx  Generate_clusters.ipynb  clustering.py
Clustering/Data/demand_data_formatted/: 2016 and 2017 monthly average demand per hour.xlsx  Average-Demand-2016.xlsx
Data/demand data/: Average -Demand- 2018.xlsx  Demand 2019.xlsx
Data/demand data/2015 demand data/: April2015.xls  August2015.xls  December2015.xls  February2015.xls  JULY2015.xls  January2015.xls  Juin2015.xls  March2015.xls  May2015.xls  November2015.xls  October2015.xls  September2015.xls
Data/demand_data_formatted/: Average-Demand-2017.xlsx  Average-Demand-2018.xlsx
Data/demand_data_formatted/2015_demand_data/: April2015.xls  August2015.xls  December2015.xls  February2015.xls  January2015.xls  July2015.xls  June2015.xls  March2015.xls  May2015.xls  November2015.xls  October2015.xls  September2015.xls
Data/supply data/PV/: PV_Baalbeck (1 kW) - 2014.csv  PV_Baalbeck (1 kW) - 2015.csv  PV_Baalbeck (1 kW) - 2016.csv  PV_Baalbeck (1 kW) - 2017.csv  PV_Baalbeck (1 kW) - 2018.csv  PV_Baalbeck (1 kW) - 2019.csv  PV_Baalbeck (1 kW) - 2020.csv
Data/supply data/Wind/: Wind - Akkar (1 kW) - 2014.csv  Wind - Akkar (1 kW) - 2015.csv  Wind - Akkar (1 kW) - 2016.csv  Wind - Akkar (1 kW) - 2017.csv  (+3 more)
Model/: input_file_v5.0.xlsx  main_v0_3_nothreading.py  model_v0_6.py
Results/Summary/: Base case results.xlsx  One way sensitivity.xlsx  scenario results.xlsx
(+550 files in other folders)
