[tool.poetry]
name = "project"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "*"
scikit-learn ="*"
black = "*"
mypy = "*"
matplotlib= "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


