[tool.poetry]
name = "project"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "*"
scikit-learn ="*"
black = "*"
mypy = "*"
matplotlib= "*"
xlrd = "*"
openpyxl = "*"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.21.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


